--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -586,67 +586,67 @@
 }
 
 .partners__c1 {
-  background-image: url("/assets/pictures/companys/Зоодисконт лого.svg");
+  background-image: url("pictures/companys/Зоодисконт лого.svg");
 }
 
 .partners__c1:hover {
-  background-image: url("/assets/pictures/companys/active/Зоодисконт цвет цовер.svg");
+  background-image: url("pictures/companys/active/Зоодисконт цвет цовер.svg");
 }
 
 .partners__c2 {
-  background-image: url("/assets/pictures/companys/Кадровый.svg");
+  background-image: url("pictures/companys/Кадровый.svg");
 }
 
 .partners__c2:hover {
-  background-image: url("/assets/pictures/companys/active/КЦ Цвет ховер.svg");
+  background-image: url("pictures/companys/active/КЦ Цвет ховер.svg");
 }
 
 .partners__c3 {
-  background-image: url("/assets/pictures/companys/Ноль Один.svg");
+  background-image: url("pictures/companys/Ноль Один.svg");
 }
 
 .partners__c3:hover {
-  background-image: url("/assets/pictures/companys/active/01 цвет ховер.svg");
+  background-image: url("pictures/companys/active/01 цвет ховер.svg");
 }
 
 .partners__c4 {
-  background-image: url("/assets/pictures/companys/Начинка.svg");
+  background-image: url("pictures/companys/Начинка.svg");
 }
 
 .partners__c4:hover {
-  background-image: url("/assets/pictures/companys/active/Начинка цвет ховер.svg");
+  background-image: url("pictures/companys/active/Начинка цвет ховер.svg");
 }
 
 .partners__c5 {
-  background-image: url("/assets/pictures/companys/Зооиндустрия лого.svg");
+  background-image: url("pictures/companys/Зооиндустрия лого.svg");
 }
 
 .partners__c5:hover {
-  background-image: url("/assets/pictures/companys/active/Индустрия цвет ховер.svg");
+  background-image: url("pictures/companys/active/Индустрия цвет ховер.svg");
 }
 
 .partners__c6 {
-  background-image: url("/assets/pictures/companys/Колхоз.svg");
+  background-image: url("pictures/companys/Колхоз.svg");
 }
 
 .partners__c6:hover {
-  background-image: url("/assets/pictures/companys/active/Колхоз цвет ховер.svg");
+  background-image: url("pictures/companys/active/Колхоз цвет ховер.svg");
 }
 
 .partners__c7 {
-  background-image: url("/assets/pictures/companys/ЗооОпт.svg");
+  background-image: url("pictures/companys/ЗооОпт.svg");
 }
 
 .partners__c7:hover {
-  background-image: url("/assets/pictures/companys/active/Зооопт цвет ховер.svg");
+  background-image: url("pictures/companys/active/Зооопт цвет ховер.svg");
 }
 
 .partners__c8 {
-  background-image: url("/assets/pictures/companys/Корм на дом.svg");
+  background-image: url("pictures/companys/Корм на дом.svg");
 }
 
 .partners__c8:hover {
-  background-image: url("/assets/pictures/companys/active/Корм цвет ховер.svg");
+  background-image: url("pictures/companys/active/Корм цвет ховер.svg");
 }
 
 .darken .partners__title {
@@ -658,67 +658,67 @@
 }
 
 .darken .partners__c1 {
-  background-image: url("/assets/pictures/companys/ЗоодисконтЛого-darken.svg");
+  background-image: url("pictures/companys/ЗоодисконтЛого-darken.svg");
 }
 
 .darken .partners__c1:hover {
-  background-image: url("/assets/pictures/companys/active/Зоодисконт цвет цовер.svg");
+  background-image: url("pictures/companys/active/Зоодисконт цвет цовер.svg");
 }
 
 .darken .partners__c2 {
-  background-image: url("/assets/pictures/companys/Кадровый-darken.svg");
+  background-image: url("pictures/companys/Кадровый-darken.svg");
 }
 
 .darken .partners__c2:hover {
-  background-image: url("/assets/pictures/companys/active/КЦ Цвет ховер.svg");
+  background-image: url("pictures/companys/active/КЦ Цвет ховер.svg");
 }
 
 .darken .partners__c3 {
-  background-image: url("/assets/pictures/companys/Ноль Один-darken.svg");
+  background-image: url("pictures/companys/Ноль Один-darken.svg");
 }
 
 .darken .partners__c3:hover {
-  background-image: url("/assets/pictures/companys/active/01 цвет ховер.svg");
+  background-image: url("pictures/companys/active/01 цвет ховер.svg");
 }
 
 .darken .partners__c4 {
-  background-image: url("/assets/pictures/companys/Начинка-darken.svg");
+  background-image: url("pictures/companys/Начинка-darken.svg");
 }
 
 .darken .partners__c4:hover {
-  background-image: url("/assets/pictures/companys/active/Начинка цвет ховер.svg");
+  background-image: url("pictures/companys/active/Начинка цвет ховер.svg");
 }
 
 .darken .partners__c5 {
-  background-image: url("/assets/pictures/companys/Зооиндустрия лого-darken.svg");
+  background-image: url("pictures/companys/Зооиндустрия лого-darken.svg");
 }
 
 .darken .partners__c5:hover {
-  background-image: url("/assets/pictures/companys/active/Индустрия цвет ховер.svg");
+  background-image: url("pictures/companys/active/Индустрия цвет ховер.svg");
 }
 
 .darken .partners__c6 {
-  background-image: url("/assets/pictures/companys/Колхоз-darken.svg");
+  background-image: url("pictures/companys/Колхоз-darken.svg");
 }
 
 .darken .partners__c6:hover {
-  background-image: url("/assets/pictures/companys/active/Колхоз цвет ховер.svg");
+  background-image: url("pictures/companys/active/Колхоз цвет ховер.svg");
 }
 
 .darken .partners__c7 {
-  background-image: url("/assets/pictures/companys/ЗооОпт-darken.svg");
+  background-image: url("pictures/companys/ЗооОпт-darken.svg");
 }
 
 .darken .partners__c7:hover {
-  background-image: url("/assets/pictures/companys/active/Зооопт цвет ховер.svg");
+  background-image: url("assets/pictures/companys/active/Зооопт цвет ховер.svg");
 }
 
 .darken .partners__c8 {
-  background-image: url("/assets/pictures/companys/Корм на дом-darken.svg");
+  background-image: url("pictures/companys/Корм на дом-darken.svg");
 }
 
 .darken .partners__c8:hover {
-  background-image: url("/assets/pictures/companys/active/Корм цвет ховер.svg");
+  background-image: url("pictures/companys/active/Корм цвет ховер.svg");
 }
 
 .contacts__wrapper {
