--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -586,7 +586,7 @@
 }
 
 .partners__c1 {
-  background-image: url("pictures/companys/Зоодисконт лого.svg");
+  background-image: url("./pictures/companys/Зоодисконт лого.svg");
 }
 
 .partners__c1:hover {
