--- a/assets/_partners.scss
+++ b/assets/_partners.scss
@@ -114,9 +114,9 @@
   }
 
   &__c1 {
-    background-image: url('./pictures/companys/Зоодисконт\ лого.svg');
+    background-image: url('../pictures/companys/Зоодисконт\ лого.svg');
     &:hover {
-      background-image: url('pictures/companys/active/Зоодисконт\ цвет\ цовер.svg');
+      background-image: url('../pictures/companys/active/Зоодисконт\ цвет\ цовер.svg');
     }
   }
 
