--- a/assets/_partners.scss
+++ b/assets/_partners.scss
@@ -121,51 +121,51 @@
   }
 
   &__c2 {
-    background-image: url('pictures/companys/Кадровый.svg');
+    background-image: url('../pictures/companys/Кадровый.svg');
     &:hover {
-      background-image: url('pictures/companys/active/КЦ\ Цвет\ ховер.svg');
+      background-image: url('../pictures/companys/active/КЦ\ Цвет\ ховер.svg');
     }
   }
 
   &__c3 {
-    background-image: url('pictures/companys/Ноль\ Один.svg');
+    background-image: url('../pictures/companys/Ноль\ Один.svg');
     &:hover {
-      background-image: url('pictures/companys/active/01\ цвет\ ховер.svg');
+      background-image: url('../pictures/companys/active/01\ цвет\ ховер.svg');
     }
   }
 
   &__c4 {
-    background-image: url('pictures/companys/Начинка.svg');
+    background-image: url('../pictures/companys/Начинка.svg');
     &:hover {
-      background-image: url('pictures/companys/active/Начинка\ цвет\ ховер.svg');
+      background-image: url('../pictures/companys/active/Начинка\ цвет\ ховер.svg');
     }
   }
 
   &__c5 {
-    background-image: url('pictures/companys/Зооиндустрия\ лого.svg');
+    background-image: url('../pictures/companys/Зооиндустрия\ лого.svg');
     &:hover {
-      background-image: url('pictures/companys/active/Индустрия\ цвет\ ховер.svg');
+      background-image: url('../pictures/companys/active/Индустрия\ цвет\ ховер.svg');
     }
   }
 
   &__c6 {
-    background-image: url('pictures/companys/Колхоз.svg');
+    background-image: url('../pictures/companys/Колхоз.svg');
     &:hover {
-      background-image: url('pictures/companys/active/Колхоз\ цвет\ ховер.svg');
+      background-image: url('../pictures/companys/active/Колхоз\ цвет\ ховер.svg');
     }
   }
 
   &__c7 {
-    background-image: url('pictures/companys/ЗооОпт.svg');
+    background-image: url('../pictures/companys/ЗооОпт.svg');
     &:hover {
-      background-image: url('pictures/companys/active/Зооопт\ цвет\ ховер.svg');
+      background-image: url('../pictures/companys/active/Зооопт\ цвет\ ховер.svg');
     }
   }
 
   &__c8 {
-    background-image: url('pictures/companys/Корм\ на\ дом.svg');
+    background-image: url('../pictures/companys/Корм\ на\ дом.svg');
     &:hover {
-      background-image: url('pictures/companys/active/Корм\ цвет\ ховер.svg');
+      background-image: url('../pictures/companys/active/Корм\ цвет\ ховер.svg');
     }
   }
 }
