--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -594,59 +594,59 @@
 }
 
 .partners__c2 {
-  background-image: url("pictures/companys/Кадровый.svg");
+  background-image: url("../pictures/companys/Кадровый.svg");
 }
 
 .partners__c2:hover {
-  background-image: url("pictures/companys/active/КЦ Цвет ховер.svg");
+  background-image: url("../pictures/companys/active/КЦ Цвет ховер.svg");
 }
 
 .partners__c3 {
-  background-image: url("pictures/companys/Ноль Один.svg");
+  background-image: url("../pictures/companys/Ноль Один.svg");
 }
 
 .partners__c3:hover {
-  background-image: url("pictures/companys/active/01 цвет ховер.svg");
+  background-image: url("../pictures/companys/active/01 цвет ховер.svg");
 }
 
 .partners__c4 {
-  background-image: url("pictures/companys/Начинка.svg");
+  background-image: url("../pictures/companys/Начинка.svg");
 }
 
 .partners__c4:hover {
-  background-image: url("pictures/companys/active/Начинка цвет ховер.svg");
+  background-image: url("../pictures/companys/active/Начинка цвет ховер.svg");
 }
 
 .partners__c5 {
-  background-image: url("pictures/companys/Зооиндустрия лого.svg");
+  background-image: url("../pictures/companys/Зооиндустрия лого.svg");
 }
 
 .partners__c5:hover {
-  background-image: url("pictures/companys/active/Индустрия цвет ховер.svg");
+  background-image: url("../pictures/companys/active/Индустрия цвет ховер.svg");
 }
 
 .partners__c6 {
-  background-image: url("pictures/companys/Колхоз.svg");
+  background-image: url("../pictures/companys/Колхоз.svg");
 }
 
 .partners__c6:hover {
-  background-image: url("pictures/companys/active/Колхоз цвет ховер.svg");
+  background-image: url("../pictures/companys/active/Колхоз цвет ховер.svg");
 }
 
 .partners__c7 {
-  background-image: url("pictures/companys/ЗооОпт.svg");
+  background-image: url("../pictures/companys/ЗооОпт.svg");
 }
 
 .partners__c7:hover {
-  background-image: url("pictures/companys/active/Зооопт цвет ховер.svg");
+  background-image: url("../pictures/companys/active/Зооопт цвет ховер.svg");
 }
 
 .partners__c8 {
-  background-image: url("pictures/companys/Корм на дом.svg");
+  background-image: url("../pictures/companys/Корм на дом.svg");
 }
 
 .partners__c8:hover {
-  background-image: url("pictures/companys/active/Корм цвет ховер.svg");
+  background-image: url("../pictures/companys/active/Корм цвет ховер.svg");
 }
 
 .darken .partners__title {
