--- a/assets/_ticker.scss
+++ b/assets/_ticker.scss
@@ -4,10 +4,10 @@
   &__text {
     z-index: -3;
     height: 96px;
-    background: repeat-x url('/assets/pictures/rollText.svg') center / contain;
+    background: repeat-x url('../pictures/rollText.svg') center / contain;
     background-size: 1452px 96px;
     background-position: 0px 0px;
-    // animation: marquee 8s linear infinite reverse;
+    animation: marquee 8s linear infinite reverse;
   }
 }
 
@@ -15,7 +15,7 @@
   .ticker {
     background-color: $color-darken;
     &__text {
-      background: repeat-x url('/assets/pictures/rollTextDarken.svg') center / contain;
+      background: repeat-x url('../pictures/rollTextDarken.svg') center / contain;
       background-size: 1452px 96px;
       background-position: 0px 0px;
     }
