--- a/assets/_privilege.scss
+++ b/assets/_privilege.scss
@@ -135,22 +135,22 @@
 }
 
 #one-money {
-  // animation: ease-in-out 2s infinite coin-two;
+  animation: ease-in-out 2s infinite coin-two;
   will-change: transform;
 }
 
 #two-money {
-  // animation: 2s ease-in-out 1s infinite coin-two;
+  animation: 2s ease-in-out 1s infinite coin-two;
   // will-change: transform;
 }
 
 #card {
-  // animation: 2s ease-in-out 1s infinite card;
+  animation: 2s ease-in-out 1s infinite card;
   // will-change: transform;
 }
 
 #shadow {
-  // animation: 2s ease-in-out 1s infinite shadow-anim;
+  animation: 2s ease-in-out 1s infinite shadow-anim;
   transform-origin: center;
   transform-box: fill-box;
   // will-change: transform;
