--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,9 +50,10 @@
 .ticker__text {
   z-index: -3;
   height: 96px;
-  background: repeat-x url("/assets/pictures/rollText.svg") center/contain;
+  background: repeat-x url("../pictures/rollText.svg") center/contain;
   background-size: 1452px 96px;
   background-position: 0px 0px;
+  animation: marquee 8s linear infinite reverse;
 }
 
 .darken .ticker {
@@ -60,7 +61,7 @@
 }
 
 .darken .ticker__text {
-  background: repeat-x url("/assets/pictures/rollTextDarken.svg") center/contain;
+  background: repeat-x url("../pictures/rollTextDarken.svg") center/contain;
   background-size: 1452px 96px;
   background-position: 0px 0px;
 }
@@ -290,10 +291,20 @@
 }
 
 #one-money {
+  animation: ease-in-out 2s infinite coin-two;
   will-change: transform;
 }
 
+#two-money {
+  animation: 2s ease-in-out 1s infinite coin-two;
+}
+
+#card {
+  animation: 2s ease-in-out 1s infinite card;
+}
+
 #shadow {
+  animation: 2s ease-in-out 1s infinite shadow-anim;
   transform-origin: center;
   transform-box: fill-box;
 }
@@ -432,7 +443,7 @@
 }
 
 .promo__play-btn-after {
-  background-image: url("/assets/pictures/PB-before.png");
+  background-image: url("../pictures/PB-before.png");
 }
 
 .promo__play-btn-before {
@@ -440,7 +451,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  background-image: url("/assets//pictures/PB.svg");
+  background-image: url("../pictures/PB.svg");
   animation: spin linear infinite 5s;
 }
 
