update css for animation

--- a/assets/_contacts.scss
+++ b/assets/_contacts.scss
@@ -139,7 +139,7 @@
       &:before {
         content: '';
         position: absolute;
-        background: url('/assets/pictures/send.svg') center;
+        background: url('../pictures/send.svg') center;
         background-repeat: no-repeat;
         right: 21px;
         width: 21px;
