--- a/assets/_contacts.scss
+++ b/assets/_contacts.scss
@@ -188,7 +188,7 @@
       &::before {
         border-color: $color-main;
         background-color: $color-main;
-        background-image: url('/assets/pictures/check.svg');
+        background-image: url('../pictures/check.svg');
       }
     }
   }
