--- a/assets/_privilege.scss
+++ b/assets/_privilege.scss
@@ -244,3 +244,132 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .privilege {
+    &__header {
+      font-size: 96px;
+      line-height: 112px;
+      width: 100%;
+      padding-left: 82px;
+    }
+
+    &__sup_title,
+    &__sub_title {
+      padding-left: 82px;
+    }
+
+    .privileges {
+      &__item {
+        margin-top: 150px;
+        flex-direction: column;
+        align-items: center;
+        &:not(:nth-child(2)) {
+          flex-direction: column-reverse;
+        }
+      }
+
+      &__picture {
+        margin: 0;
+        &:nth-child(1) {
+          margin: 0;
+        }
+      }
+
+      &__text {
+        margin-top: 50px;
+        min-height: 250px;
+      }
+    }
+
+    &__ending {
+      flex-direction: column;
+      align-items: flex-start;
+      margin-top: 100px;
+      padding-left: 82px;
+    }
+
+    &__count {
+      margin: 30px 0 0 0;
+    }
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .privilege {
+    margin-top: 90px;
+
+    &__header {
+      padding: 0 0 0 44px;
+      font-size: 36px;
+      line-height: 42px;
+    }
+
+    &__title {
+      padding: 0 44px;
+    }
+
+    &__sub_title {
+      font-size: 24px;
+      line-height: 28px;
+      padding: 0;
+    }
+
+    &__sup_title {
+      font-size: 36px;
+      line-height: 42px;
+      padding: 0;
+      margin-top: 5px;
+    }
+
+    .privileges {
+      margin-top: 50px;
+
+      &__item:not(:first-child) {
+        margin-top: 92px;
+      }
+
+      &__text {
+        margin-top: 40px;
+        max-width: 231px;
+        border-bottom: 1px solid black;
+      }
+
+      &__title {
+        font-size: 18px;
+        line-height: 21px;
+      }
+
+      &__description {
+        margin-top: 21px;
+        font-size: 14px;
+        line-height: 16px;
+
+        p {
+          margin-top: 5px;
+        }
+      }
+
+      &__picture {
+        width: 230px;
+      }
+    }
+
+    &__ending {
+      margin-top: 60px;
+      padding: 0;
+      padding-left: 2.75rem;
+    }
+
+    &__text {
+      font-size: 24px;
+      line-height: 28px;
+    }
+
+    &__count {
+      margin-top: 20px;
+      font-size: 36px;
+      line-height: 42px;
+    }
+  }
+}
