--- a/assets/_promo.scss
+++ b/assets/_promo.scss
@@ -12,7 +12,11 @@
     font-size: 105px;
     line-height: 123px;
     color: $color-white;
-    letter-spacing: 1px; // delete this after added -webkit-text-stroke: ;
+    letter-spacing: 1px;
+
+    .hide {
+      display: none;
+    }
 
     span {
       color: $color-text;
@@ -47,7 +51,7 @@
     }
 
     &-after {
-      background-image: url('/assets/pictures/PB-before.png');
+      background-image: url('../pictures/PB-before.png');
     }
 
     &-before {
@@ -56,7 +60,7 @@
       left: 0;
       top: 0;
 
-      background-image: url('/assets//pictures/PB.svg');
+      background-image: url('../pictures/PB.svg');
       animation: spin linear infinite 5s;
     }
   }
@@ -93,12 +97,75 @@
 
     &__play-btn {
       &-after {
-        background-image: url('/assets//pictures/PB-darken.svg');
+        background-image: url('../pictures/PB-darken.svg');
       }
 
       &-before {
-        background-image: url('/assets/pictures/PB-before-darken.png');
+        background-image: url('../pictures/PB-before-darken.png');
       }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .promo {
+    &__text {
+      font-size: 96px;
+      line-height: 105px;
+      padding-left: 82px;
+      .hide {
+        display: unset;
+      }
+    }
+
+    &__controls {
+      width: 100%;
+      margin: 0;
+      margin-top: 50px;
+      padding-left: 82px;
+      justify-content: flex-start;
+    }
+
+    &__buy-btn {
+      margin: 0;
+      margin-right: 96px;
+    }
+  }
+
+  .darken {
+    .promo {
+      &__text {
+        color: $color-text;
+        span > span {
+          color: $color-white;
+          z-index: 0;
+          top: 8.5%;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .promo {
+    margin-top: 100px;
+
+    &__text {
+      padding-left: 44px;
+      font-size: 36px;
+      line-height: 42px;
+    }
+
+    &__controls {
+      margin-top: 50px;
+      padding: 0;
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &__buy-btn {
+      margin: 0;
     }
   }
 }
