--- a/assets/_offer.scss
+++ b/assets/_offer.scss
@@ -60,6 +60,7 @@
       z-index: 0;
       top: -20%;
       left: 70%;
+      z-index: -1;
     }
     &-right {
       z-index: 1;
@@ -145,7 +146,7 @@
         width: 100px;
         height: 104px;
         top: 85px;
-        left: 0;
+        left: calc(100% - 82vw);
         filter: blur(5px);
       }
 
@@ -153,7 +154,7 @@
         width: 51px;
         height: 61px;
         left: unset;
-        right: 25px;
+        right: calc(100% - 77vw);
       }
 
       &-right {
@@ -161,8 +162,96 @@
         height: 96px;
         left: unset;
         top: 100px;
-        right: 20px;
+        right: calc(100% - 82vw);
         filter: blur(5px);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .offer {
+    &__egg {
+      &-bottom {
+        left: unset;
+        right: calc(100% - 81vw);
+      }
+
+      &-right {
+        left: unset;
+        top: 100px;
+        right: calc(100% - 85vw);
+      }
+
+      &-left {
+        top: 85px;
+        left: calc(100% - 87vw);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .offer {
+    &__egg {
+      &-bottom {
+        left: unset;
+        right: 15%;
+      }
+
+      &-right {
+        left: unset;
+        top: 100px;
+        right: 15%;
+      }
+
+      &-left {
+        top: 85px;
+        left: 10%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .offer {
+    &__egg {
+      &-bottom {
+        left: unset;
+        right: 40px;
+      }
+
+      &-right {
+        left: unset;
+        top: 100px;
+        right: 30px;
+      }
+
+      &-left {
+        top: 85px;
+        left: 10px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .offer {
+    &__egg {
+      &-bottom {
+        left: unset;
+        right: 20px;
+      }
+
+      &-right {
+        left: unset;
+        top: 100px;
+        right: 15px;
+      }
+
+      &-left {
+        top: 85px;
+        left: -5px;
       }
     }
   }
